Avoid horizontal scrollbars in chat.
Forb's fix to avoid horizontal scollbars in chat + some additions to make it
work using experimental vendor-prefixed CSS. Incidentally, this results in big
pictures having only a portion visible. May need some js to resize pictures to
fit the chat width. May need to revert this if it causes problems.

svn path=/trunk/; revision=498

--- a/site/css/themes/claro/claro.css
+++ b/site/css/themes/claro/claro.css
@@ -3891,6 +3891,8 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 .claro .dijitSplitContainer-child, .claro .dijitBorderContainer-child {
   
   border: 1px #b5bcc7 solid;
+  word-wrap: break-word;
+  overflow-x: hidden;
 }
 .claro .dijitBorderContainer-dijitTabContainerTop,
 .claro .dijitBorderContainer-dijitTabContainerBottom,
